More test fixes.